[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
itertools = "0.12.0"
regex = "1.10.2"
tuple = "0.5.1"
rangemap = "1.4.0"
num = "0.4.1"
phf = {version = "0.11.2", features = ["macros"]}
rayon = "1.8.0"
grid = "0.12.0"
arrayvec = "0.7.4"
ndarray = "0.15.6"
rand = "0.8.5"
ndarray-linalg = "0.16.0"
